<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MovieListing</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string-array name="movie_array">
        <item >Please Choose an option</item>
        <item >Current Movies</item>
        <item >Upcoming Movies</item>
        
    </string-array>
        <string name="search_for_a_movie">Search for a Movie</string>
        <string name="go">Go</string>
        <string name="please_search_for_a_movie">Please Search for a Movie</string>
        <string name="or_choose_an_option_below">Or Choose an Option below</string>
        <string name="movie_title_">"Movie Title: "</string>
        <string name="runtime_">"Runtime: "</string>
        <string name="mpaa_rating_">"MPAA Rating: "</string>
        <string name="thumbnail_">"Thumbnail: "</string>
        <string name="theater_image">theater image</string>
        <string name="please_choose_an_option">Please Choose an Option</string>
        <string name="title">Title</string>
        <string name="rating">Rating</string>
        <string name="runtime">Runtime in Minutes</string>
        <string name="filter">Filter</string>
        <string name="filter_your_movie_list">Filter your Movie List</string>
        <string name="then_use_the_field_below_to_filter_the_list_">Then use the field below to filter the list.</string>
        <string name="click_to_filter_list">Click to Filter List</string>
        <string name="the_user_searched_for_">The user searched for:</string>
        <string name="click_image_to_see_current_showtimes">Click Image to See Current Showtimes</string>
        <string name="back_to_main_list">Back to Main List</string>

</resources>
